--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -23,9 +23,9 @@ jobs :
       with:
         node-version: ${{ matrix.node-version }}
     - name: install dependency
-    - run: |
+      run: |
         npm install
     - name: build and test dependency.
-    - run: |
+      run: |
         npm run build
         npm test
