--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -24,7 +24,7 @@ jobs :
         node-version: ${{ matrix.node-version }}
     - name: install dependency
       run: |
-        npm install 
+        yarn install 
     - name: build and test dependency.
       run: |
         npm run build
