--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -27,5 +27,5 @@ jobs :
         yarn install 
     - name: build and test dependency.
       run: |
-        yarn run build
-        yarn test
+        npm run build
+        npm test
