--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -24,8 +24,8 @@ jobs :
         node-version: ${{ matrix.node-version }}
     - name: install dependency
       run: |
-        npm install --legacy-peer-deps 
-    - name: build and test dependency.
+        yarn install
+    - name: build  dependency.
       run: |
         npm run build
-        npm test
+        
