--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -9,7 +9,7 @@ on :
 
  # what to do when trigger event occurs   
 jobs :
-  build_and_test :
+  build :
     runs-on : ubuntu-latest
     
     strategy :
@@ -28,4 +28,24 @@ jobs :
     - name: build  dependency.
       run: |
         npm run build
-        
+    - name: Uploading Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+          name: build artifact
+          path: ./build
+  deploy:
+    needs : build
+    runs-on : ubuntu-latest
+
+    steps:
+    - name : downloading artifact
+      uses : actions/download-artifact@v3
+      with:
+         name : build artifact
+         path : ./build
+    - name : seploying to github page
+      uses : peaceiris/actions-gh-pages@v3    
+      with:
+        github_token: ${{ secrets.KEY }} 
+        publish_dir: ./build
+         
