--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -46,6 +46,6 @@ jobs :
     - name : seploying to github page
       uses : peaceiris/actions-gh-pages@v3    
       with:
-        github_token: ${{ secrets.KEY }} 
+        github_token: ${{ secrets.SECRET_KEY }} 
         publish_dir: ./build
          
