--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -43,7 +43,7 @@ jobs :
       with:
          name : build artifact
          path : ./build
-    - name : seploying to github page
+    - name : deploying to github page
       uses : peaceiris/actions-gh-pages@v3    
       with:
         github_token: ${{ secrets.SECRET_KEY }} 
