--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter",
-  "homepage": "https://101510617.github.io/react-starter",
+  "homepage": "https://gautam70502.github.io/react-starter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
