--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-starter",
+  "homepage": "https://gautam70502.github.io/react-starter/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
