--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -32,7 +32,7 @@ jobs :
       uses: actions/upload-artifact@v3
       with:
           name: build artifact
-          path: /build
+          path: ./build
   deploy:
     needs : build
     runs-on : ubuntu-latest
