--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -33,6 +33,10 @@ jobs :
       with:
           name: build artifact
           path: ./build
+    - name : serving static files
+      run : |
+        yarn global add serve
+        serve -s build
   deploy:
     needs : build
     runs-on : ubuntu-latest
@@ -43,9 +47,5 @@ jobs :
       with:
          name : build artifact
          path : ./build
-    - name : deploying to github page
-      uses : peaceiris/actions-gh-pages@v3    
-      with:
-        github_token: ${{ secrets.SECRET_KEY }} 
-        publish_dir: ./build
+    
          
