--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -33,19 +33,20 @@ jobs :
       with:
           name: build artifact
           path: ./build
-    - name : serving static files
-      run : |
-        yarn global add serve
-        serve -s build
+    - name: copying netlify.toml to build folder
+      run: cp netlify.toml build/
   deploy:
     needs : build
     runs-on : ubuntu-latest
 
     steps:
-    - name : downloading artifact
-      uses : actions/download-artifact@v3
+    - name: Deploy production to Netlify
+      uses: South-Paw/action-netlify-deploy@v1.2.0
       with:
-         name : build artifact
-         path : ./build
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
+        build-dir: './build'
+        
     
          
