--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -46,7 +46,7 @@ jobs :
         github-token: ${{ secrets.SECRET_KEY }}
         netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
-        build-dir: './react-starter/build'
+        build-dir: './build'
         
     
          
