--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-starter",
+  "homepage": "https://Gautam70502.github.io/react-starter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
+    "gh-pages": "^6.1.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +28,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start:clean": "rm -rf node_modules/ && rm -rf yarn.lock && yarn && yarn start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
