--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -38,17 +38,17 @@ jobs :
     needs : build
     runs-on : ubuntu-latest
     steps:
-    - name : 
-    run: |
-        git config --global user.name $user_name
-        git config --global user.email $user_email
-        git remote set-url origin https://${github_token}@github.com/${repository}
-        npm run deploy
-    env:
-        user_name: 'Gautam70502'
-        user_email: 'gautamrathod70502@gmail.com'
-        github_token: ${{ secrets.SECRET_KEY }}
-        repository: ${{ github.repository }}
-        
-    
-         
+    - name : Deploying to github page
+      run: |
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${github_token}@github.com/${repository}
+          npm run deploy
+      env:
+          user_name: 'Gautam70502'
+          user_email: 'gautamrathod70502@gmail.com'
+          github_token: ${{ secrets.SECRET_KEY }}
+          repository: ${{ github.repository }}
+          
+      
+          
