--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -42,7 +42,7 @@ jobs :
       run: |
           git config --global user.name $user_name
           git config --global user.email $user_email
-          git remote set-url origin  https://github.com/Gautam70502/react-starter.git
+          git remote set-url origin  https://${user_name}:${github_token}@github.com/${repository}
           npm run deploy
       env:
           user_name: 'Gautam70502'
