--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -40,6 +40,9 @@ jobs :
     steps:
     - name : Deploying to github page
       run: |
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${github_token}@github.com/${repository}.git
           npm run deploy
       env:
           user_name: 'Gautam70502'
