--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -34,16 +34,11 @@ jobs :
           name: build artifact
           path: ./build
 
-  deploy :
-    needs : build
-    runs-on : ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
     - name : Deploying to github page
       run: |
           git config --global user.name Gautam70502
           git config --global user.email gautamrathod70502@gmail.com
-          git remote set-url origin `https://@github.com/Gautam70502/react-starter.git`
+          git remote set-url origin `https://${{secrets.SECRET_KEY}}@github.com/Gautam70502/react-starter.git`
           npm run deploy
       env:
           user_name: 'Gautam70502'
