--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -33,8 +33,22 @@ jobs :
       with:
           name: build artifact
           path: ./build
-    
-      
-          
-      
-          
+    - name: copying netlify.toml to build folder
+      run: cp netlify.toml build/
+
+  deploy :
+    needs : build
+    runs-on : ubuntu-latest
+    steps:
+    - name : downloading artifact
+      uses : actions/download-artifact@v3
+      with:
+         name : build artifact
+         path : ./build
+    - name: Deploy production to Netlify
+      uses: South-Paw/action-netlify-deploy@v1.2.0
+      with:
+        github-token: ${{ secrets.SECRET_KEY }}
+        netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
+        build-dir: './build'
