--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -1,4 +1,4 @@
-name : react-ci-cd
+name : react-ci-cd-docker
 
 # setting up trigger event
 on : 
@@ -9,46 +9,25 @@ on :
 
  # what to do when trigger event occurs   
 jobs :
-  build :
+  CI :
     runs-on : ubuntu-latest
-    
-    strategy :
-      matrix :  
-        node-version : [18.x]
         
     steps:    
     - uses: actions/checkout@v2
-    - name: setup node
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: install dependency
-      run: |
-        yarn install
-    - name: build  dependency.
-      run: |
-        npm run build
-    - name: Uploading Build Artifact
-      uses: actions/upload-artifact@v3
-      with:
-          name: build artifact
-          path: ./build
-    - name: copying netlify.toml to build folder
-      run: cp netlify.toml build/
 
-  deploy :
-    needs : build
-    runs-on : ubuntu-latest
-    steps:
-    - name : downloading artifact
-      uses : actions/download-artifact@v3
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with: 
+        username : ${{secrets.DOCKERHUB_USERNAME}}
+        password : ${{secrets.DOCKERHUB_PASSWORD}}
+
+    - name: setup docker buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and Push to DockerHub
+      uses: docker/build-push-action@v5
       with:
-         name : build artifact
-         path : ./build
-    - name: Deploy production to Netlify
-      uses: South-Paw/action-netlify-deploy@v1.2.0
-      with:
-        github-token: ${{ secrets.SECRET_KEY }}
-        netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-        netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
-        build-dir: './build'
+        context: .
+        file: Dockerfile
+        push : true
+        tags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
