--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -30,9 +30,9 @@ jobs :
         context: .
         file: Dockerfile
         push : true
-        tags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
+        stags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
 
     - name: Run Docker Image
-       uses: docker/cli-action@v1
-       with:
+      uses: docker/cli-action@v1
+      with:
         docker_cmd: react-image:latest    
