--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -36,3 +36,6 @@ jobs :
       run: |
         docker pull gautamdockerpro/react-image:latest
         docker run --name react-app -p 3000:3000 react-image:latest
+      with:
+        username : ${{secrets.DOCKERHUB_USERNAME}}
+        password : ${{secrets.DOCKERHUB_PASSWORD}}
