--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -32,10 +32,11 @@ jobs :
         push : true
         tags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
 
-    - name: Run Docker Image
-      with:
+    - uses: docker/login-action@v3
+      with: 
         username : ${{secrets.DOCKERHUB_USERNAME}}
         password : ${{secrets.DOCKERHUB_PASSWORD}}
+      name: Run docker Image  
       run: |
         docker pull gautamdockerpro/react-image:latest
         docker run --name react-app -p 3000:3000 react-image:latest
