--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -36,7 +36,7 @@ jobs :
       with: 
         username : ${{secrets.DOCKERHUB_USERNAME}}
         password : ${{secrets.DOCKERHUB_PASSWORD}}
-      name: Run docker Image  
+    - name: Run docker Image  
       run: |
         docker pull gautamdockerpro/react-image:latest
         docker run --name react-app -p 3000:3000 react-image:latest
