--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -32,10 +32,15 @@ jobs :
         push : true
         tags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
 
+  CD :      
+    runs-on : ubuntu-latest
+    steps :
+
     - uses: docker/login-action@v3
       with: 
         username : ${{secrets.DOCKERHUB_USERNAME}}
         password : ${{secrets.DOCKERHUB_PASSWORD}}
+        
     - name: Run docker Image  
       run: |
         docker pull gautamdockerpro/react-image:latest
