--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -37,13 +37,25 @@ jobs :
     runs-on : ubuntu-latest
     steps :
 
-    - uses: docker/login-action@v3
-      with: 
-        username : ${{secrets.DOCKERHUB_USERNAME}}
-        password : ${{secrets.DOCKERHUB_PASSWORD}}
+    - uses: actions/checkout@v2
 
-    - name: Run docker Image  
-      run: |
-        hostname -I
-        docker pull gautamdockerpro/react-image:latest
-        docker run --name react-app -p 3000:3000 gautamdockerpro/react-image:latest 
+    - name: Deploy to EC2 Instance
+      uses: easingthemes/ssh-deploy@main
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+        REMOTE_HOST: ${{ secrets.HOST_DNS }}
+        REMOTE_USER: ${{ secrets.USERNAME }}
+
+    - name: Executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@master 
+      with: 
+        host: ${{ secrets.HOST_DNS }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          sudo yum update
+          sudo yum install -y docker
+          sudo service docker start
+          sudo docker login --username ${{secrets.DOCKERHUB_USERNAME}} $ password: ${{secrets.DOCKERHUB_PASSWORD}}
+          sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
+          sudo docker run --name react-app -p 3000:3000 gautamdockerpro/react-image:latest
