--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -38,8 +38,8 @@ jobs :
     steps :
 
     - uses: actions/checkout@v2
-    - name: Create SSH directory
-      run: mkdir -p ~/.ssh
+    - name: view files
+      run: ls
     - name: Deploy to EC2 Instance
       uses: easingthemes/ssh-deploy@main
       env:
