--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -41,23 +41,17 @@ jobs :
     - name: view files
       run: ls -la /home/runner/
     - name: Deploy to EC2 Instance
-      uses: easingthemes/ssh-deploy@main
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.deploy_key_Amazon }}
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
         REMOTE_HOST: ${{ secrets.HOST_DNS }}
         REMOTE_USER: ${{ secrets.USERNAME }}
         TARGET: home
-
-    - name: Executing remote ssh commands using ssh key
-      uses: appleboy/ssh-action@master 
-      with: 
-        host: ${{ secrets.HOST_DNS }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.deploy_key_Amazon}}
-        script: |
-          sudo yum update
-          sudo yum install -y docker
-          sudo service docker start
-          sudo docker login --username ${{secrets.DOCKERHUB_USERNAME}} $ password: ${{secrets.DOCKERHUB_PASSWORD}}
-          sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
-          sudo docker run --name react-app -p 3000:3000 gautamdockerpro/react-image:latest
+      run: |
+          echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ec2-user@${REMOTE_HOST} '
+            sudo yum update
+            sudo yum install -y docker
+            sudo service docker start
+            sudo docker login --username ${{secrets.DOCKERHUB_USERNAME}} $ password: ${{secrets.DOCKERHUB_PASSWORD}}
+            sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
+            sudo docker run --name react-app -p 3000:3000 gautamdockerpro/react-image:latest
