--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -49,8 +49,8 @@ jobs :
       run: |
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ec2-user@${REMOTE_HOST}
-            sudo yum update
-            sudo yum install -y docker
+            sudo apt update
+            sudo apt install -y docker
             sudo service docker start
             sudo docker login --username ${{secrets.DOCKERHUB_USERNAME}} $ password: ${{secrets.DOCKERHUB_PASSWORD}}
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
