--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -48,10 +48,11 @@ jobs :
         TARGET: home
       run: |
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ec2-user@${REMOTE_HOST}
+          ssh  -i private_key ec2-user@${REMOTE_HOST}
             sudo apt update
             sudo apt install -y docker
             sudo service docker start
             echo "${{ secrets.DOCKERHUB_PASSWORD }}" | sudo docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
             sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
             sudo docker run --name react-app -p 3000:3000 gautamdockerpro/react-image:latest
+            sudo exit
