--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -34,7 +34,7 @@ jobs :
 
   CD :   
     needs : CI   
-    runs-on : ubuntu-latest
+    runs-on : self-hosted
     steps :
 
     - uses: actions/checkout@v2
