--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -34,9 +34,9 @@ jobs :
 
   CD :   
     needs : CI   
-    runs-on : [aws-ec2]
+    runs-on : [ec2-runner]
     steps :
-
+  
     - name: Pull image from docker hub
       run: docker pull gautamdockerpro/react-image:latest
     - name: Delete old container
