--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -9,23 +9,40 @@ on :
 
  # what to do when trigger event occurs   
 jobs :
-  build_and_push_to_gcr :
+  CI :
     runs-on : ubuntu-latest
         
     steps:    
     - uses: actions/checkout@v2
 
-    - name: install gcloud cli
-      uses: google-github-actions/setup-gcloud@v0
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
       with: 
-        project_id: ${{secrets.GOOGLE_PROJECT}}
-        service_account_key: ${{secrets.GOOGLE_SERVICE_ACCOUNT_KEY}}
-        export_default_credentials: true
-        
-    - name: build and push image
-      env : 
-        GOOGLE_PROJECT : ${{secrets.GOOGLE_PROJECT}}
-      run : |
-        gcloud auth configure-docker us-east4-docker.pkg.dev
-        docker build -t us-east4-docker.pkg.dev/ciphernutz/test-repo/react-img:latest .
-        docker push us-east4-docker.pkg.dev/ciphernutz/test-repo/react-img:latest
+        username : ${{secrets.DOCKERHUB_USERNAME}}
+        password : ${{secrets.DOCKERHUB_PASSWORD}}
+
+    - name: setup docker buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and Push to DockerHub
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: Dockerfile
+        push : true
+        tags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
+
+  CD :   
+    needs : CI
+    runs-on : ubuntu-latest
+    steps :
+    - name : pull image and run on ec2
+      uses : appleboy/ssh-action@master
+      with : 
+        host : ${{secrets.HOST_DNS}}
+        username : ec2-user
+        key :  ${{secrets.EC2_SSH_KEY}}
+        envs : GITHUB_SHA
+        script : |
+          echo "hello world"
+          
