--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -9,46 +9,23 @@ on :
 
  # what to do when trigger event occurs   
 jobs :
-  CI :
+  build_and_push_to_gcr :
     runs-on : ubuntu-latest
         
     steps:    
     - uses: actions/checkout@v2
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
+    - name: install gcloud cli
+      uses: google-github-actions/setup-gcloud@v0
       with: 
-        username : ${{secrets.DOCKERHUB_USERNAME}}
-        password : ${{secrets.DOCKERHUB_PASSWORD}}
-
-    - name: setup docker buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build and Push to DockerHub
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: Dockerfile
-        push : true
-        tags : ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
-
-  CD :   
-    needs : CI
-    runs-on : [ec2-runner]
-    steps :
-    - name : pull image and run on ec2
-      uses : appleboy/ssh-action@master
-      with : 
-        host : ${{secrets.HOST_DNS}}
-        username : ec2-user
-        key :  ${{secrets.EC2_SSH_KEY}}
-        envs : GITHUB_SHA
-        script : |
-          sudo yum update
-          sudo yum install -y docker
-          docker --version
-          sudo service docker start
-          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | sudo docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          sudo docker pull ${{secrets.DOCKERHUB_USERNAME}}/react-image:latest
-          sudo docker run --name react-app -p 3000:3000 gautamdockerpro/react-image:latest
-          
+        project_id: ${{secrets.GOOGLE_PROJECT}}
+        service_account_key: ${{secrets.GOOGLE_SERVICE_ACCOUNT_KEY}}
+        export_default_credentials: true
+        
+    - name: build and push image
+      env : 
+        GOOGLE_PROJECT : ${{secrets.GOOGLE_PROJECT}}
+      run : |
+        gcloud auth configure-docker us-east4-docker.pkg.dev
+        docker build -t us-east4-docker.pkg.dev/ciphernutz/test-repo/react-img:latest .
+        docker push us-east4-docker.pkg.dev/ciphernutz/test-repo/react-img:latest
