--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -14,11 +14,11 @@ jobs :
         
     steps:    
     - uses: actions/checkout@v2
-
-    - id: "auth"
-      uses: "google-github-actions/auth@v1"
+    
+    - name: Google Cloud Auth
+      uses: "google-github-actions/auth@v2"
       with:
-        credentials_json: '${{ secrets.SERVICE_ACCOUNT_KEY }}'
+        credentials_json: '${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}'
         project_id : ${{secrets.GOOGLE_PROJECT}}
 
     - name: install gcloud cli
