--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -50,6 +50,7 @@ jobs :
         DOCKER_IMAGE_URL: us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest
       run: |
         gcloud run deploy react-app \
+          --project react-app
           --image ${{env.DOCKER_IMAGE_URL}} \
           --platform managed \
           --region us-east4 \
