--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -48,6 +48,7 @@ jobs :
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy react-app \
+          --project ${{secrets.GOOGLE_PROJECT}}
           --image us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest \
           --platform managed \
           --region us-east4 \
