--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -49,7 +49,7 @@ jobs :
       run: |
         gcloud run deploy react-app \
           --project ${{secrets.GOOGLE_PROJECT}}
-          --image us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest \
+          --image gcr.io/us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest \
           --platform managed \
           --region us-east4 \
           --allow-unauthenticated
