--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -49,7 +49,7 @@ jobs :
       run: |
         gcloud run deploy react-app \
           --image us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest \
-          --project ${{secrets.GOOGLE_PROJECT}}
           --region us-east4 \
+          --project ${{secrets.GOOGLE_PROJECT}} \
           --platform managed \
           --allow-unauthenticated
