--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -41,17 +41,18 @@ jobs :
         docker build -t ${{env.DOCKER_IMAGE_URL}} .
         docker push ${{env.DOCKER_IMAGE_URL}}
 
-  # CD :
-  #   needs : CI
-  #   runs-on : ubuntu-latest
-  #   steps:    
+  CD :
+    needs : CI
+    runs-on : ubuntu-latest
+    steps:    
     - name: Deploy to Cloud Run
       env : 
-       SERVICE_NAME  : react-img
+       SERVICE_NAME  : react-app
+       DOCKER_IMAGE_URL: us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest  
       run: |
         echo SERVICE_NAME $SERVICE_NAME
         gcloud run deploy $SERVICE_NAME \
-          --image us-east4-docker.pkg.dev/${{secrets.GOOGLE_PROJECT}}/test-repo/react-img:latest \
+          --image ${{env.DOCKER_IMAGE_URL}} \
           --region us-east4 \
           --project ${{secrets.GOOGLE_PROJECT}} \
           --platform managed \
