--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -48,7 +48,7 @@ jobs :
       run: |
         gcloud run deploy ${{env.SERVICE_NAME}} \
           --image ${{env.DOCKER_IMAGE_URL}} \
-          --region us-east4 \
+          --region us-central1 \
           --project ${{secrets.GOOGLE_PROJECT}} \
           --platform managed \
           --allow-unauthenticated
